# cairn-messenger

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  deny.toml  metrics.md  rust-toolchain.toml  rustfmt.toml
.cargo/: audit.toml
.github/workflows/: ci.yml  release-sign.yml
android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
crates/cairn-cli/: Cargo.toml
crates/cairn-cli/src/: main.rs
crates/cairn-crypto/: Cargo.toml
crates/cairn-crypto/src/: aead.rs  ed25519.rs  error.rs  hkdf.rs  lib.rs  never_export.rs  x25519.rs
crates/cairn-ct-bench/: Cargo.toml
crates/cairn-ct-bench/src/: main.rs
crates/cairn-envelope/: Cargo.toml
crates/cairn-envelope/interop/go-cose/: go.mod  go.sum  interop_test.go
crates/cairn-envelope/src/: canonical.rs  cose_sign1.rs  error.rs  lib.rs
crates/cairn-envelope/tests/: test_vectors.rs
crates/cairn-envelope/tests/vectors/: README.md  capability_token_001.json  master_attestation_001.json  trust_graph_op_001.json
crates/cairn-identity/: Cargo.toml
crates/cairn-identity/src/: attestation.rs  capabilities.rs  error.rs  lib.rs  token.rs
crates/cairn-identity/tests/vectors/attestation/: cert-0.der  cert-1.der  cert-2.der  cert-3.der
crates/cairn-recovery/: Cargo.toml
crates/cairn-recovery/src/: attestation.rs  card.rs  error.rs  lib.rs  peer_store.rs
crates/cairn-release/: Cargo.toml
crates/cairn-release/src/: main.rs  produce.rs  roots.rs
crates/cairn-shamir/: Cargo.toml
crates/cairn-shamir/src/: commit.rs  error.rs  gf256.rs  lib.rs  share.rs
crates/cairn-sigstore-verify/: Cargo.toml
crates/cairn-sigstore-verify/src/: anchors.rs  client.rs  compose.rs  decode.rs  error.rs  fulcio.rs  lib.rs  manifest.rs  rekor.rs  sct.rs
crates/cairn-sigstore-verify/tests/: fulcio_gha_vector.rs  fulcio_staging_vector.rs  rekor_gha_binding.rs  rekor_production_vector.rs  rekor_staging_vector.rs  rekor_wiremock.rs  sct_vector.rs  staging_sct_vector.rs  verify_release.rs
crates/cairn-sigstore-verify/tests/vectors/fulcio-gha/: README.md  ctlog-pubkey.pem  fulcio-chain.pem  leaf-cert.pem  rekor-hashedrekord-body.json
crates/cairn-sigstore-verify/tests/vectors/fulcio-staging/: README.md  leaf-cert.pem  root-chain.pem
crates/cairn-sigstore-verify/tests/vectors/fulcio-staging-sct/: README.md  leaf-cert.pem
crates/cairn-sigstore-verify/tests/vectors/rekor-production/: README.md  entry-logindex1767842880.json
crates/cairn-sigstore-verify/tests/vectors/rekor-staging/: README.md  entry-logindex1.json
crates/cairn-sigsum-client/: Cargo.toml
crates/cairn-sigsum-client/src/: cache.rs  client.rs  emit.rs  error.rs  leaf.rs  lib.rs  verify.rs  witness.rs
crates/cairn-sigsum-client/tests/: emit_leaf_wiremock.rs  refresh_tree_head_wiremock.rs  verify_bundled_inclusion.rs  verify_inclusion_wiremock.rs
crates/cairn-simplex-adapter/: Cargo.toml
crates/cairn-simplex-adapter/src/: adapter.rs  client.rs  envelope.rs  error.rs  lib.rs  padding.rs  protocol.rs  ratchet.rs  sidecar.rs  storage.rs
crates/cairn-simplex-adapter/tests/: live_simplex.rs
crates/cairn-storage/: Cargo.toml
crates/cairn-storage/src/: encryption.rs  error.rs  key_provider.rs  lib.rs  schema.rs  storage.rs
crates/cairn-tor-transport/: Cargo.toml
crates/cairn-tor-transport/src/: config.rs  control.rs  error.rs  lib.rs  socks5.rs  transport.rs
crates/cairn-tor-transport/tests/: control_port.rs  socks5_connect.rs
crates/cairn-trust-graph/: Cargo.toml
crates/cairn-trust-graph/src/: cascade.rs  chain.rs  error.rs  introduction.rs  lib.rs  op.rs  self_token.rs  signed.rs  store.rs  vouch.rs
crates/cairn-trust-graph/src/cascade/: mod.rs  timer.rs
crates/cairn-uniffi/: Cargo.toml
crates/cairn-uniffi/src/: android_log.rs  demo_signer.rs  error.rs  hardware.rs  identity.rs  lib.rs  messaging.rs  never_export_gate.rs  recovery.rs  release_verify.rs  storage.rs  tor.rs  transparency.rs  trust_graph.rs
docs/: REVIEW.md  after-seizure.md  architecture-diagrams.md  architecture-simplification-review.md  design-brief.md  facilitator-handbook.md  handoff.md  implementation-status.md  install-guide.md  name-candidates.md  network-transport-research.md  open-questions.md  peer-recovery-handbook.md  section-10-review.md  section-4-review.md  sections-6-7-review.md  sections-8-9-review.md  storage-research.md  user-guide.md
docs/archive/: README.md  section-1-review.md  section-2-review.md  section-5-review.md
docs/decisions/: D0001-project-name.md  D0002-duress-profile.md  D0003-implementation-language.md  D0004-v1-scope-cuts.md  D0005-peer-verification.md  D0006-cryptographic-envelope.md  D0007-multi-device.md  D0008-volunteer-baseline-cadence.md  D0009-sudden-unavailability.md  D0010-foundation-jurisdiction.md  D0011-audit-budget-and-timing.md  D0012-researcher-safe-harbor.md  D0013-pilot-consent-exit.md  D0014-non-peer-recovery.md  D0015-v1-release-security-posture.md  D0016-foundation-incorporation-trigger.md  D0017-calyxos-inclusion.md  D0018-engineering-foundation.md  D0019-license.md  D0020-integration-architecture.md  D0021-library-pin-audit.md  D0022-storage-layer.md  D0023-sigsum-integration.md  D0024-sigstore-release-verification.md  D0025-cairn-tor-transport.md  D0026-cairn-simplex-adapter.md  D0027-cairn-uniffi-crate-surface.md  D0028-android-shell-build-pipeline.md  D0029-quick-unlock.md  D0030-change-passphrase.md  D0031-delete-purge.md  D0032-read-receipts.md  D0033-key-attestation-verification.md  D0034-group-chat-scope.md  D0035-trust-graph-activation.md  D0036-provenance-annotation.md  D0037-introductions.md  (+5 more)
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_canonical_cbor.rs  fuzz_capability_token.rs  fuzz_cose_header.rs  fuzz_envelope_decrypt.rs  fuzz_envelope_parse.rs  fuzz_master_attestation.rs  fuzz_release_bundle.rs  fuzz_shamir_reconstruct.rs  fuzz_trust_graph_op.rs  fuzz_uniffi_boundary.rs
research/: README.md
scripts/: check-ffi-no-secrets.py
specs/: README.md
(+78 files in other folders)
