# Cairn workspace
#
# Per D0018 (engineering foundation) §8.1.
# Per D0019 (license): AGPL-3.0-only.
# Per D0020 (integration architecture).
#
# See docs/decisions/D0018-engineering-foundation.md for the full rationale
# behind every crate version pin in [workspace.dependencies].
#
# CRITICAL: library versions are pinned with `=X.Y.Z` (exact) rather than
# `^X.Y.Z` (semver) because byte-level encoder behavior must not change
# transparently. Upgrades are coordinated events per D0018 §9.1.

[workspace]
resolver = "2"
members = [
    # Foundational cryptographic primitives (Tier 1 MDC)
    "crates/cairn-crypto",
    # Canonical CBOR + COSE_Sign1 envelope construction (Tier 1 MDC)
    "crates/cairn-envelope",
    # Shamir Secret Sharing with BLAKE3 commit-of-secret (Tier 1 MDC)
    "crates/cairn-shamir",
    # Capability-token construction per D0006 §9 (Tier 1 MDC)
    "crates/cairn-identity",
    # Constant-time benchmarks per D0018 §5.3 (Tier 1 MDC infrastructure)
    "crates/cairn-ct-bench",
    # Minimum demoable capability CLI composing the above
    "crates/cairn-cli",
    # Trust-graph operations per D0006 §2 (Tier 2 protocol layer)
    "crates/cairn-trust-graph",
    # Recovery: master-attestation of new operational identity (Tier 2)
    "crates/cairn-recovery",
    # Persistent storage layer per D0022 (rusqlite + per-value AEAD)
    "crates/cairn-storage",
    # Sigsum integration: commitment-only logging per D0023
    "crates/cairn-sigsum-client",
    # Sigstore release verification: identity-based signing + Rekor
    # + Sigsum-anchored release log composition per D0024
    "crates/cairn-sigstore-verify",
    # Tor transport: Rust-side SOCKS5 + control-port client of the bundled
    # C-Tor service (not Arti-embedded; arti deferred per the D0025 revision)
    "crates/cairn-tor-transport",
    # SimpleX adapter: project-owned Rust SMP client + Cairn message
    # envelope per D0026
    "crates/cairn-simplex-adapter",
    # FFI boundary crate: the curated Kotlin-facing surface per D0027
    # (downstream of D0020 §3)
    "crates/cairn-uniffi",
    # Release-producer: builds + signs a verifiable ReleaseBundle (the
    # D0024 §6 / D0015 producer side; self-minted roots per D0041 phase 1)
    "crates/cairn-release",
]
# Future members per D0018 §8.6 (added incrementally as Tier 1/2/3 lands):
#   "crates/cairn-identity",
#   "crates/cairn-trust-graph",
#   "crates/cairn-recovery",
#   "crates/cairn-storage",
#   "crates/cairn-simplex-adapter",
#   "crates/cairn-tor-transport",
#   "crates/cairn-sigsum-client",
#   "crates/cairn-sigstore-verify",
#   "crates/cairn-uniffi",
#   "crates/cairn-cli",
#   "fuzz",

[workspace.package]
edition = "2024"
# Bumped 1.85 -> 1.88 (2026-06-01 coordination event, D0018 §7.4): the SimpleX
# Android FFI transport (simploxide-sxcrt-sys `let`-chains), simploxide-client
# (`const from_hours`), and the `time` RUSTSEC-2026-0009 fix all require 1.88.
# Then 1.88 -> 1.91 (2026-06-01, SECOND rotation): shipping the Android FFI
# transport needs 1.91 — `simploxide-sxcrt-sys 0.2.0`'s lib uses
# `Duration::from_mins` (stable 1.91), ABOVE 1.88; the earlier "FFI needs 1.88"
# undercounted (a 1.94.1 probe masked it). 1.91 is the verified minimal floor.
# Workspace re-validated on 1.91 (all four host gates + the android FFI check on
# the PINNED toolchain). See rust-toolchain.toml.
rust-version = "1.91"
license = "AGPL-3.0-only"
authors = ["Cairn maintainers and contributors"]
repository = "https://github.com/cairn-project/cairn"
homepage = "https://cairn-project.org"

[workspace.dependencies]
# === Cryptographic primitives (D0018 §1) ===
ed25519-dalek = { version = "=2.2.0", default-features = false, features = [
    "std",
    "rand_core",
    "zeroize",
] }
x25519-dalek = { version = "=2.0.1", default-features = false, features = [
    "static_secrets",
    "zeroize",
] }
hkdf = "=0.12.4"
chacha20poly1305 = "=0.10.1"
sha2 = "=0.10.9"
blake3 = "=1.5.4"  # for Shamir commit-of-secret only per D0018 §3.4
# base64 for the C2SP tlog-cosignature/v1 signed-note root-hash encoding
# (Sigsum get-tree-head + cosignature formats per D0023 §3). Signing-input
# path, so the audited crate rather than a hand-rolled encoder.
base64 = "=0.22.1"

# === Memory hygiene (D0018 §1.6) ===
zeroize = { version = "=1.8.1", features = ["derive"] }
secrecy = "=0.10.3"
subtle = "=2.6.1"

# === CSPRNG (D0018 §1.7) ===
# `getrandom` 0.4.x is not yet shipped as of 2026-05; pinning the latest stable
# 0.2 line which is what libsignal currently uses. Upgrade coordinated.
getrandom = "=0.2.15"
rand_core = "=0.6.4"

# === CBOR + COSE (D0018 §2.1-2.2) ===
ciborium = "=0.2.2"
coset = "=0.4.2"

# === Shamir Secret Sharing (D0018 §3.1) ===
vsss-rs = { version = "=5.4.0", default-features = false, features = [
    "std",
    "zeroize",
] }

# === Storage layer (D0022) ===
# SQLite via rusqlite with the `bundled` feature so libsqlite3-sys
# ships its own SQLite source rather than relying on the platform's
# version. WAL mode + synchronous=FULL applied at connection open per
# D0022 §1.1. SQLite is treated as an audit trust root per D0011 per
# D0022 §6.3.
rusqlite = { version = "=0.32.1", features = ["bundled"] }
# Password-stretching primitive for the passphrase → KEK derivation
# per D0022 §2.2. Argon2id is the chosen variant; default-features =
# false trims OS-specific code we don't need at the storage layer.
argon2 = { version = "=0.5.3", default-features = false, features = ["alloc"] }

# === Sigsum integration (D0023) ===
# HTTPS client for the cairn-sigsum-client crate per D0023 §2.
# default-features = false strips native-tls, cookies, compression;
# rustls-tls + json are the surface this crate uses. Pure-Rust TLS via
# rustls aligns with the workspace pure-Rust discipline (modulo SQLite
# via D0022).
reqwest = { version = "=0.12.5", default-features = false, features = [
    "rustls-tls",
    "json",
] }
# URL parsing for log + witness endpoint references per D0023 §3.3.
url = "=2.5.2"
# Serde + serde_json for the witnesses.toml config parsing + Sigsum
# JSON response shapes per D0023 §2.3. Cairn's canonical CBOR remains
# the on-the-wire format for trust-graph + capability tokens; serde is
# only used at integration boundaries with external JSON / TOML.
# Bumped 1.0.215 -> 1.0.220 (2026-06-01 coordination event, D0018 §9.1),
# paired with the 1.88 MSRV event (§7.4): `time` 0.3.47 (the RUSTSEC-2026-0009
# fix) depends on the post-split `serde_core ^1.0.220`, and 1.0.215 predates
# the serde/serde_core split — so the exact `=1.0.215` pin made the advisory
# unfixable. 1.0.220 is the minimal version that provides `serde_core 1.0.220`;
# serde is a verify-/parse-path-only boundary dep (no canonical-CBOR exposure).
serde = { version = "=1.0.220", features = ["derive"] }
serde_json = "=1.0.133"
toml = "=0.8.23"

# === Sigstore release verification (D0024 §6.5) ===
# ECDSA P-256 verify-only, for the Rekor signed-checkpoint verification
# per D0024 §3 (REVISED 2026-05-30: the public rekor.sigstore.dev log
# signs its C2SP checkpoint with ECDSA P-256, not Ed25519 as the
# original D0024 §3.2 stated — cairn-crypto has no P-256, so this is a
# deliberate new audited curve in the verify-only trust path).
# default-features = false keeps it to the curve arithmetic + ECDSA
# verify + PEM/SPKI public-key parsing; no signing, no ECDH, no JWK.
# Pure-Rust (RustCrypto) per the workspace pure-Rust discipline.
p256 = { version = "=0.13.2", default-features = false, features = [
    "ecdsa",
    "pem",
] }
# X.509 parsing + Fulcio cert-chain signature verification per D0024 §2.
# NOTE (2026-05-31): the `verify` feature enables the optional `ring`
# dependency (C + assembly, BoringSSL-derived) — this is NOT pure-Rust,
# a DELIBERATE departure from the workspace pure-Rust discipline for the
# verify-only Fulcio trust path. Rationale: `ring`/`webpki`-style
# verification is battle-tested and audit-friendly, whereas hand-rolling
# X.509 chain-signature verification in pure Rust is error-prone and, by
# the project's own "pure-Rust only if not security-worse" principle,
# the riskier choice. The original D0024 §6.5 wrongly called this pin
# "pure-Rust"; corrected in the §6.5 revision note.
x509-parser = { version = "=0.16.0", default-features = false, features = [
    "verify",
] }

# === FFI boundary (D0020 §3 + D0027) ===
# UniFFI for the Kotlin<->Rust boundary per D0020 §3.1, pinned exact
# per D0020 §3.11. The `tokio` feature enables async exports
# (suspend funs in Kotlin) for the four async I/O crates per D0027 §5.
# `cli` enables the uniffi-bindgen entrypoint used to generate the
# Kotlin bindings from the compiled library. Consumed ONLY by
# cairn-uniffi, behind its `uniffi-bindings` feature, per D0027 §8.
uniffi = { version = "=0.31.1", features = ["tokio", "cli"] }

# === Logging facade (D0018 §4.3) ===
log = { version = "=0.4.22", features = ["release_max_level_info"] }

# === Application-level (cairn-cli only) ===
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter", "json"] }
log-panics = { version = "=2.1.0", features = ["with-backtrace"] }
anyhow = "=1.0.86"
clap = { version = "=4.6.1", features = ["derive"] }

# === Error handling (D0018 §4.2) ===
thiserror = "=1.0.63"
# Note: `displaydoc` removed per D0021. `thiserror` covers the
# error-with-Display surface used by `cairn-crypto`, `cairn-envelope`,
# and `cairn-shamir` without a separate macro layer. Re-add via D-doc
# if a future surface needs the markdown-style doc-comment derive.

# === Async (cairn-cli + I/O adapters only; NOT crypto core; D0018 §4.1) ===
# `time` feature added for cairn-sigsum-client's RetryBudget per D0023 §5.3.
# `sync` feature added for cairn-simplex-adapter's ws-core transport: the
# lazily-dialed RawClient + event-queue handle are guarded by tokio::sync
# primitives ACROSS `.await` (a std::sync::Mutex held across await is the
# `await_holding_lock` footgun). Also pulled transitively by
# simploxide-ws-core, so this only makes an already-present feature explicit.
tokio = { version = "=1.43.1", features = ["rt-multi-thread", "macros", "time", "sync"] }

# === SimpleX raw-WS sidecar client (D0026 §1.3) ===
# The adapter speaks to the SimpleX Chat CLI sidecar over a loopback
# WebSocket. Pinned to the LOW-LEVEL `simploxide-ws-core` (a raw
# command/event WS client), NOT the high-level `simploxide-client` Bot SDK,
# for three reasons (full rationale + the toolchain×feature probe matrix in
# D0026 §12):
#   1. MSRV: ws-core (+ its `simploxide-core` dep) COMPILE on the pinned
#      rust 1.85; simploxide-client 0.11.0 does NOT (it uses `const
#      Duration::from_hours`, const-stable only on newer rust) AND its
#      websocket-only build is upstream-broken (BotBuilder::new sets
#      cfg("cli")-gated fields unconditionally). ws-core sidesteps both.
#   2. Architecture: ws-core's `connect("ws://127.0.0.1:{port}")` is exactly
#      the D0020 §1.1 sidecar-connect model with NO subprocess — its `cli`
#      feature (tokio/process) is OFF by default.
#   3. Trust surface: it sheds simploxide-client + simploxide-api-types +
#      serde-aux + serde-value + ordered-float from the message path, leaving
#      Cairn to own the narrow command/JSON layer — D0026's "project-owned
#      SMP client" thesis.
# tokio stays at the workspace `=1.40.0` pin (cargo selects tokio-util 0.7.17
# + socket2 0.5.10 to satisfy it); no tokio bump, no MSRV coordination event.
simploxide-ws-core = "=0.2.0"

# === SimpleX in-process FFI transport — ANDROID ONLY (D0026 §12) ===
# The Android SidecarTransport (D0020 §1.9): there is no standalone Android
# simplex-chat CLI binary, so on device the SimpleX daemon runs IN-PROCESS via
# the JNI `libsimplex` library. `simploxide-ffi-core` exposes the SAME raw
# command/response/event String API as `simploxide-ws-core` (so Cairn's
# `protocol.rs` + the shared transport `flow` are reused verbatim); it pulls
# `simploxide-sxcrt-sys` (`links = "simplex"`), whose build script links
# `libsimplex` + the GHC Haskell runtime (~161 `.so`/ABI from SimpleX's
# official bundle) at build time. AGPL-3.0 (compatible with Cairn's AGPL).
#
# Referenced ONLY under `[target.'cfg(target_os = "android")'.dependencies]`
# in cairn-simplex-adapter so the x86_64-linux CI host (clippy/test
# `--all-features`) never builds `sxcrt-sys` (its script hard-fails without a
# `libsimplex` bundle). The per-ABI link happens at the Android APK/cdylib
# stage.
#
# MSRV: `sxcrt-sys 0.2.0`'s LIB uses `Duration::from_mins` (stable since rust
# 1.91 — `duration_constructors`), so the Android FFI build needs rust >= 1.91.
# The earlier "needs >= 1.88 (build.rs let-chains)" claim undercounted (a probe
# on the default 1.94.1 toolchain masked it). The workspace was bumped 1.88 ->
# 1.91 to clear this (D0018 §7.4, the second rotation); the FFI transport now
# compiles for aarch64-linux-android on the pinned toolchain. Needs no tokio bump.
simploxide-ffi-core = "=0.2.0"

# logcat backend for the `log` facade on Android (cairn-uniffi's
# src/android_log.rs), D0026 §12 on-device observability. The workspace forbids
# first-party `unsafe`, so the liblog FFI is confined to this vetted,
# android-target-only crate. `default-features = false` drops its regex/
# env-filter tree (we use only the static tag + max-level), leaving a minimal
# `android_log-sys` + `log` surface. Referenced ONLY under cairn-uniffi's
# `[target.'cfg(target_os = "android")'.dependencies]`, so the x86_64 host/CI
# never builds it.
android_logger = { version = "=0.14.1", default-features = false }

# === Testing (D0018 §5) ===
proptest = { version = "=1.5.0", default-features = false, features = ["std"] }
arbitrary = { version = "=1.3.2", features = ["derive"] }
hex-literal = "=0.4.1"  # RFC 5869 / RFC 8439 test-vector decoding
# Hermetic HTTP mock server for the async network surfaces (D0023 §10
# Sigsum get-tree-head, D0024 Rekor, etc.). Dev-dependency only — never
# in the shipped trust path — but pinned exact for lockfile determinism
# consistent with the rest of the workspace. Held at 0.6.4 (tokio
# ^1.5.0) rather than 0.6.5 (tokio ^1.47.1): a test mock must not force
# a bump of the exact-pinned `tokio =1.40.0` core runtime (D0018 §9.1).
wiremock = "=0.6.4"
# Test-only X.509 cert generation for the Fulcio cert-chain-validation
# tests (D0024 §2). Default features select the `ring` backend (already
# pulled by x509-parser's `verify` feature), so no second C crypto lib
# (aws-lc-rs) enters the test build. Dev-dependency only.
rcgen = "=0.13.2"

# === Constant-time benchmarking (D0018 §5.3) ===
# Bumped 0.6.0 → 0.7.0 per D0021's pin-audit hygiene action: 0.7.0
# declares `rust-version = "1.85"` matching our toolchain pin (0.6.0
# left MSRV implicit). Same author / repo / license / features.
dudect-bencher = "=0.7.0"

[workspace.lints.rust]
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "warn"
missing_docs = "warn"
unused_must_use = "deny"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
# correctness is deny-by-default already
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Specific high-value lints for security-critical code per D0018 §8.1
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "warn"
arithmetic_side_effects = "warn"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
mem_forget = "deny"
exit = "deny"

# Modest noise reduction on pedantic in early-stage code
module_name_repetitions = "allow"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
# Surfaced by the 1.85->1.88 MSRV bump (D0018 §7.4): clippy's `nursery`
# `format_push_string` flags `buf.push_str(&format!(..))` in favor of
# `write!(buf, ..)`. A style/allocation nit (not correctness) across the
# Sigsum/Tor/Sigstore string-building; allowed here to keep the MSRV bump
# focused on the toolchain. Converting those sites to `write!` is a tracked
# follow-up cleanup, not part of the coordination event.
format_push_string = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
overflow-checks = true

[profile.release-with-debug]
inherits = "release"
debug = "line-tables-only"  # for crash-symbol resolution without exposing secrets

[profile.bench]
inherits = "release"
debug = "line-tables-only"
