# SPDX-License-Identifier: AGPL-3.0-only
# Copyright (c) 2026 Cairn maintainers and contributors

# Standalone fuzz package per cargo-fuzz convention. NOT a member of
# the root workspace because libfuzzer-sys requires special link
# discipline (-fsanitize=fuzzer) that would propagate to non-fuzz
# builds. The fuzz/ workspace member appears in D0018 §8.6's enumerated
# layout; this Cargo.toml is the concrete realization.

[package]
name = "cairn-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

# Excludes this crate from the parent workspace. cargo-fuzz init's
# default pattern; without it, cargo build at the workspace root would
# try to link libfuzzer into every workspace crate.
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
# === Fuzzing infrastructure per D0018 §5.2 ===
libfuzzer-sys = "=0.4.10"

# D0018 §5.2 also specifies `arbitrary = "1"` with derive for
# structure-aware harnesses; intentionally NOT pulled here because
# the workspace pins `arbitrary = "=1.3.2"` and the latest
# `derive_arbitrary` proc-macro is incompatible with that minor
# version (references symbols added post-1.3.x). v1 fuzz targets
# parse raw bytes manually instead; a future D0021 audit revision
# will align the pins and re-enable structure-aware derive.

# === Targets under fuzz: Tier 1 MDC + Tier 2 protocol crates ===
cairn-crypto = { path = "../crates/cairn-crypto" }
cairn-envelope = { path = "../crates/cairn-envelope" }
cairn-identity = { path = "../crates/cairn-identity" }
cairn-recovery = { path = "../crates/cairn-recovery" }
cairn-shamir = { path = "../crates/cairn-shamir" }
cairn-trust-graph = { path = "../crates/cairn-trust-graph" }
# Release-pipeline decode boundary (D0024 §6.4 / D0041 §6.3). Pulls the
# full sigstore-verify dep tree into the fuzz build; the fuzz package is
# a standalone workspace, so this does not affect the main build graph.
cairn-sigstore-verify = { path = "../crates/cairn-sigstore-verify" }

# === CBOR decoder (used directly by the fuzz_canonical_cbor target
# for the upstream ciborium decode boundary; the per-schema targets
# go through cairn-envelope / cairn-identity / cairn-trust-graph
# instead) ===
ciborium = "=0.2.2"

# === Memory hygiene (mirror the workspace-level discipline) ===
zeroize = "=1.8.1"

# === Fuzz target binaries ===
# Each target is registered as a [[bin]] entry. cargo-fuzz auto-
# discovers targets in fuzz_targets/ but the explicit declarations make
# the surface visible at the Cargo.toml layer (audit-target discipline
# per D0018).

[[bin]]
name = "fuzz_envelope_parse"
path = "fuzz_targets/fuzz_envelope_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_canonical_cbor"
path = "fuzz_targets/fuzz_canonical_cbor.rs"
test = false
doc = false

[[bin]]
name = "fuzz_shamir_reconstruct"
path = "fuzz_targets/fuzz_shamir_reconstruct.rs"
test = false
doc = false

[[bin]]
name = "fuzz_capability_token"
path = "fuzz_targets/fuzz_capability_token.rs"
test = false
doc = false

[[bin]]
name = "fuzz_trust_graph_op"
path = "fuzz_targets/fuzz_trust_graph_op.rs"
test = false
doc = false

[[bin]]
name = "fuzz_master_attestation"
path = "fuzz_targets/fuzz_master_attestation.rs"
test = false
doc = false

[[bin]]
name = "fuzz_release_bundle"
path = "fuzz_targets/fuzz_release_bundle.rs"
test = false
doc = false
