# SPDX-License-Identifier: AGPL-3.0-only
# Copyright (c) 2026 Cairn maintainers and contributors

[package]
name = "cairn-cli"
version = "0.1.0-dev"
description = "Cairn minimum-demoable-capability CLI (gen-key + issue-token + verify-token)"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "cairn"
path = "src/main.rs"

[dependencies]
# === Foundational primitives ===
cairn-crypto = { path = "../cairn-crypto" }
cairn-envelope = { path = "../cairn-envelope" }
cairn-identity = { path = "../cairn-identity" }
cairn-shamir = { path = "../cairn-shamir" }

# === App-layer utilities (D0018 §4.1-4.3) ===
anyhow = { workspace = true }
clap = { workspace = true }

# === Memory hygiene (D0018 §1.6) ===
zeroize = { workspace = true }

# === CSPRNG (D0018 §1.7) ===
rand_core = { workspace = true }
