# SPDX-License-Identifier: AGPL-3.0-only
# Copyright (c) 2026 Cairn maintainers and contributors

[package]
name = "cairn-identity"
version = "0.1.0-dev"
description = "Cairn capability-token construction (operational identity → device) per D0006 §9"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# === Foundational primitives ===
cairn-crypto = { path = "../cairn-crypto" }
cairn-envelope = { path = "../cairn-envelope" }

# === CBOR (D0018 §2.1) ===
# Used for decoding capability-token payload bytes back to the typed
# struct. Encoding uses cairn-envelope::canonical (deterministic).
ciborium = { workspace = true }

# === X.509 attestation-chain verification (D0033 §2) ===
# The `verify` feature pulls a `ring`-backed signature check used to
# walk the Android Key Attestation chain (leaf -> intermediates ->
# pinned Google Hardware Attestation Root). Same exact pin + the same
# deliberate, documented departure from pure-Rust discipline that the
# Fulcio path (D0024 §6.5) already carries: hand-rolling ECDSA-P256/
# P-384 X.509 verification is the riskier choice. The `asn1-rs`
# re-exported through `x509-parser::der_parser` decodes the KeyMint
# `KeyDescription` extension (OID 1.3.6.1.4.1.11129.2.1.17).
x509-parser = { workspace = true }

# === Memory hygiene (D0018 §1.6) ===
zeroize = { workspace = true }

# === Error handling (D0018 §4.2) ===
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
hex-literal = { workspace = true }
rand_core = { workspace = true }
# Test-only synthetic X.509 generation for the attestation pin test
# (D0033 §2): builds a self-signed P-384 root + leaf whose links verify
# but whose root SPKI is NOT the pinned Google root, proving the pin
# rejects an otherwise-valid chain. Same exact pin the Fulcio chain test
# uses (D0024 §2); `ring` backend, no second C crypto lib.
rcgen = { workspace = true }
